body adjust to fix scrolling on mobile

--- a/CSS/style-mobile.css
+++ b/CSS/style-mobile.css
@@ -111,4 +111,8 @@
         display: block;
         flex-direction: column;
     }
+    body {
+        max-width:100%;
+        overflow-x: hidden;
+    }
 }
